--- a/8. 도시락통/css/reset.css
+++ b/8. 도시락통/css/reset.css
@@ -16,9 +16,8 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-    font-family: "Noto Sans KR", sans-serif;
 	vertical-align: baseline;
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -53,4 +52,8 @@ a {
 img, video {
     width: 100%;
     display: block;
+}
+
+span {
+	display: inline-block;
 }
