--- a/9. 라미/css/style.css
+++ b/9. 라미/css/style.css
@@ -5,6 +5,18 @@
   width: 100%;
   position: relative;
   z-index: 0;
+  overflow: hidden;
+}
+
+.black_bg {
+  position: fixed;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0);
+  transition: 0.25s ease-in-out;
 }
 
 header {
@@ -57,6 +69,62 @@ header {
   z-index: 991;
 }
 
+.menu_box {
+  position: fixed;
+  z-index: 995;
+  top: 0;
+  left: 0;
+  width: 600px;
+  height: 100vh;
+  background-color: white;
+  transition: 0.25s ease-in-out;
+  transform: translateX(-600px);
+}
+
+.menu_container {
+  width: 250px;
+  height: 100px;
+  position: relative;
+  z-index: 996;
+  padding-left: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.close_button {
+  width: 50px;
+  position: relative;
+  z-index: 996;
+  cursor: pointer;
+}
+
+.black_logo {
+  width: 150px;
+  position: relative;
+  z-index: 996;
+}
+
+.black_logo a img{
+  filter: brightness(0);
+}
+
+.nav {
+  position: relative;
+  z-index: 996;
+  padding: 60px 100px 0 100px;
+  width: 100%;
+}
+
+.nav a {
+  width: 100%;
+  height: 100px;
+  font-size: 32px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+}
+
 .body_wrap {
   width: 100%;
   position: relative;
@@ -106,7 +174,7 @@ header {
   font-weight: bold;
 }
 
-.section_1 .gost_box a {
+.section_1 .ghost_box a {
   width: 150px;
   height: 50px;
   color: white;
@@ -115,4 +183,10 @@ header {
   justify-content: center;
   align-items: center;
   border: 1px solid white;
+  transition: 0.25s ease-in-out;
+}
+
+.section_1 .ghost_box a:hover {
+  color: black;
+  background-color: white;
 }
