--- a/10.인트로스/css/style.css
+++ b/10.인트로스/css/style.css
@@ -4,8 +4,6 @@
 .wrap {
   position: relative;
   z-index: 0;
-  top: 0;
-  left: 0;
   width: 100%;
   overflow: hidden;
 }
@@ -15,83 +13,169 @@ header {
   z-index: 990;
   width: 100%;
   height: 80px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 40px;
-}
-
-.logo {
-  position: relative;
-  z-index: 991;
-  width: 160px;
-}
-
-.logo_black {
-  position: absolute;
-  z-index: 991;
-  width: 100%;
   top: 0;
   left: 0;
-  display: none;
+  padding: 0 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.menu_wrap {
-  position: absolute;
-  z-index: 991;
-  left: 50%;
+.side_menu_click {
+  position: fixed;
+  z-index: 995;
   top: 0;
-  transform: translateX(-50%);
-  height: 80px;
-  display: flex;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(15,0,80,0.95);
+  transition: 0.25s ease-in-out;
+  transform: translateX(100vw);
+  opacity: 0;
 }
 
-.menu {
+.side_header {
   position: relative;
-  z-index: 991;
-  width: 180px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.menu_text {
-  position: relative;
-  z-index: 992;
   width: 100%;
   height: 80px;
+  z-index: 996;
+  padding: 0 40px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+}
+
+.side_logo {
+  position: relative;
+  z-index: 996;
+  width: 130px;
+}
+
+.close_btn {
+  position: relative;
+  z-index: 996;
+  width: 50px;
+  height: 50px;
   cursor: pointer;
-  color: white;
-  font-size: 18px;
-  font-weight: 600;
 }
 
-.sub_menu {
+.close_btn::before {
+  content: "";
   position: absolute;
-  z-index: 992;
-  width: 100%;
-  height: 200px;
-  padding: 20px 0;
-  top: 80px;
+  z-index: 996;
+  width: 40px;
+  height: 2px;
+  background-color: white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotateZ(-45deg); 
 }
 
-.sub_menu a {
+.close_btn::after {
+  content: "";
+  position: absolute;
+  z-index: 996;
+  width: 40px;
+  height: 2px;
+  background-color: white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotateZ(45deg); 
+}
+
+.side_text {
   position: relative;
-  z-index: 992;
+  z-index: 996;
   width: 100%;
-  height: 40px;
+  padding-top: 100px;
+}
+
+.side_text>li {
+  position: relative;
+  z-index: 996;
   display: flex;
-  justify-content: center;
+  width: 100%;
+  height: 100px;
   align-items: center;
+}
+
+.side_line {
+  width: 400px;
+  opacity: 0;
+}
+
+.side_text li:nth-child(1) .side_line {
+  opacity: 1;
+}
+
+.side_line .line {
+  width: 90%;
+  height: 1px;
+  background-color: white;
+}
+
+.side_bold {
+  position: relative;
+  z-index: 996;
+  width: 300px;
+  font-size: 45px;
+  font-weight: bold;
+  color: white;
+}
+
+.side_bold p {
+  position: absolute;
+  z-index: 996;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  opacity: 0.5;
+  width: auto;
+}
+
+.side_text li:nth-child(1) .side_bold p {
+  opacity: 1;
+}
+
+.side_re {
   display: none;
 }
 
-.white_box {
+.side_text li:nth-child(1) .side_re {
+  display: flex;
+}
+
+.side_re li {
+  padding-right: 50px;
+}
+
+.side_re a {
+  position: relative;
+  z-index: 996;
+  font-size: 24px;
+  color: white;
+}
+
+.side_re a::after {
+  content: "";
   position: absolute;
-  z-index: 990;
+  z-index: 996;
+  width: 100%;
+  height: 2px;
+  bottom: -8px;
+  left: 0;
+  background-color: white;
+  display: none;
+}
+
+.side_re a:hover::after {
+  display: block;
+}
+
+.white_bg {
+  position: absolute;
+  z-index: 899;
   width: 100%;
   height: 280px;
   background-color: white;
@@ -101,28 +185,216 @@ header {
 }
 
 .black_line {
-  position: relative;
-  top: 80px;
-  width: 100%;
+  position: absolute;
+  z-index: 990;
+  width: 100vw;
   height: 1px;
-  background-color: rgba(90, 90, 90, 0.2);
+  top: 80px;
+  background-color: rgba(150, 150, 150, 0.5);
+  display: none;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-.body_wrap {
+.logo {
   position: relative;
-  z-index: 0;
+  z-index: 992;
+  width: 130px;
+}
+
+.black_logo {
+  position: absolute;
+  z-index: 992;
+  top: 0;
+  left: 0;
+  display: none;
+}
+
+.menu_wrap {
+  position: absolute;
+  z-index: 991;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  top: 0;
+  left: 0;
+}
+
+.menu_container {
+  position: relative;
+  top: 0;
+  z-index: 991;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+}
+
+.menu {
+  position: relative;
+  z-index: 992;
+  width: 200px;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.menu_text {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 600;
+  color: white;
+}
+
+.sub_menu {
+  position: absolute;
+  z-index: 992;
+  width: 100%;
+  height: 200px;
+  top: 80px;
+  padding: 20px 0;
+  display: none;
+}
+
+.menu_container:hover .menu_text {
+  color: black;
+}
+
+.menu_container:hover .sub_menu {
+  display: block;
+}
+
+.menu:hover > .menu_text {
+  background-color: #6400FF;
+  color: white;
+}
+.menu:hover > .sub_menu {
+  background-color: #6400FF;
+}
+.menu:hover > .sub_menu a{
+  color: white;
+}
+
+.menu:hover {
+  border-bottom: 1px solid #CCB5FF;
+}
+
+.sub_menu a {
+  position: relative;
+  z-index: 992;
+  width: 100%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.sub_menu p {
+  position: relative;
+  height: 25px;
+  display: flex;
+  align-items: center;
+}
+
+.sub_menu p::after {
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  background-color: white;
+  display: none;
+}
+
+.sub_menu p:hover::after {
+  display: block;
+}
+
+.side {
+  position: relative;
+  z-index: 991;
+  width: 160px;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.side>div {
+  position: relative;
+  z-index: 992;
+  width: 80px;
+  height: 80px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.side>div>img {
+  width: 30px;
+  position: relative;
+  z-index: 992;
+}
+
+.language_text {
+  position: absolute;
+  z-index: 992;
+  top: 80px;
+  left: 0;
+  height: 120px;
+  width: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  color: white;
+  font-size: 25px;
+  font-weight: 600;
+  background-color: #6400FF;
+  display: none;
+}
+
+.language_text li {
+  position: relative;
+  z-index: 992;
+  width: 80px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.language_text li p {
+  height: 30px;
+}
+
+.language_text li:nth-child(2) p{
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.language:hover {
+  background-color: #6400FF;
+  border-bottom: 1px solid rgba(150, 150, 150, 0.5);
+}
+
+.language:hover .language_text {
+  display: block;
+}
+
+.language_text li:nth-child(1):hover>p {
+  border-bottom: 2px solid white;
+}
+.language_text li:nth-child(2):hover>p {
+  border-bottom: 2px solid white;
+  color: white;
 }
