--- a/10.인트로스/css/style.css
+++ b/10.인트로스/css/style.css
@@ -399,3 +399,65 @@ header {
   border-bottom: 2px solid white;
   color: white;
 }
+
+/*! header end */
+
+.body_wrap {
+  position: relative;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+/* ! section_1 start */
+
+.section_1 {
+  position: relative;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.section_1 img  { 
+  position: absolute;
+  z-index: 0;
+  width: 100%;
+}
+
+.section_1 .text_container {
+  position: relative;
+  z-index: 1;
+  max-width: 1700px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.section_1 .main_text {
+  font-size: 120px;
+  font-weight: bold;
+  background: linear-gradient(90deg, #AB86FF 0%, #6400FF 100%);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  /* ! 위 3항은 글자에 그라데이션을 넣는 방법 */
+  transform: translateX(200px);
+  opacity: 0;
+}
+
+.section_1 .sub_text {
+  padding: 30px 0 80px 0;
+  line-height: 30px;
+  font-size: 24px;
+  color: white;
+  font-weight: 500;
+  transform: translateX(200px);
+  opacity: 0;
+}
+
+
