section2 css complete

--- a/10.인트로스/css/common.css
+++ b/10.인트로스/css/common.css
@@ -2,6 +2,8 @@
   width: 100%;
   max-width: 1400px;
   margin: 0 auto;
+  position: relative;
+  z-index: 0;
 }
 
 .section_2, .secition_3, .section_4, .section_5, .seciton_6 {
