--- a/10.인트로스/css/style.css
+++ b/10.인트로스/css/style.css
@@ -460,4 +460,183 @@ header {
   opacity: 0;
 }
 
+/* ! section_1 end */
 
+.section_2 {
+  position: relative;
+  z-index: 0;
+  width: 100%;
+}
+
+.section_2 .inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.section_2 .text_container {
+  position: relative;
+  z-index: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.section_2 .text_container .left_box .about_text {
+  font-size: 20px;
+  font-weight: 700;
+  color: rgb(100, 0, 255);
+}
+
+.section_2 .text_container .left_box .main_text {
+  font-size: 48px;
+  font-weight: 800;
+  line-height: 1.33;
+  padding-top: 20px;
+  word-spacing: -8px;
+  letter-spacing: -4px;
+}
+
+.section_2 .text_container .right_box {
+  position: absolute;
+  z-index: 0;
+  height: 100%;
+  right: 0;
+  display: flex;
+  align-items: flex-end;
+}
+
+.section_2 .text_container .right_box .company_btn {
+  position: relative;
+  z-index: 0;
+  width: 175px;
+  height: 50px;
+  border: 1px solid black;
+  display: flex;
+}
+
+.section_2 .text_container .right_box .company_btn .text_wrap {
+  position: relative;
+  z-index: 0;
+  width: 130px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.section_2 .text_container .right_box .company_btn .arrow_wrap {
+  position: relative;
+  z-index: 0;
+  width: 45px;
+  height: 100%;
+  overflow: hidden;
+  border-left: 1px solid black;
+}
+
+.section_2 .text_container .right_box .company_btn .arrow_wrap >div {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  width: 90px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.section_2 .text_container .right_box .company_btn .arrow_wrap .arrow_inbox_white {
+  display: none;
+  animation: arrow_ani 0.5s ease-in-out infinite backwards;
+}
+
+.section_2 .text_container .right_box .company_btn .arrow_wrap .arrow {
+  position: relative;
+  z-index: 1;
+  width: 45px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.section_2 .text_container .right_box .company_btn .arrow_wrap .arrow img {
+  width: 20px;
+}
+
+.section_2 .text_container .right_box .company_btn:hover {
+  border: 1px solid #6400FF;
+}
+
+.section_2 .text_container .right_box .company_btn:hover .text_wrap {
+  color: #6400FF;
+}
+
+.section_2 .text_container .right_box .company_btn:hover .arrow_wrap {
+  background-color: #6400FF;
+  border-left: 1px solid #6400FF;
+}
+
+.section_2 .text_container .right_box .company_btn:hover .arrow_wrap .arrow_inbox_black {
+  display: none;
+}
+
+.section_2 .text_container .right_box .company_btn:hover .arrow_wrap .arrow_inbox_white {
+  display: flex;
+}
+
+@keyframes arrow_ani {
+  form {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(45px);
+  }
+}
+
+.section_2 .contents_container {
+  position: relative;
+  z-index: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 140px;
+}
+
+.section_2 .contents_container .left_contents, .section_2 .contents_container .right_contents {
+  width: 660px;
+  position: relative;
+  z-index: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.section_2 .contents_container .right_contents {
+  border-left: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.section_2 .contents_container img {
+  height: 200px;
+}
+
+.section_2 .contents_container .main_text {
+  padding-top: 26px;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 56px;
+  text-align: center;
+}
+
+.section_2 .contents_container .sub_text {
+  padding-top: 24px;
+  font-size: 19px;
+  font-weight: 600;
+  line-height: 28px;
+  text-align: center;
+}
+
+/* ! section_2 end */
