--- a/10.인트로스/css/style.css
+++ b/10.인트로스/css/style.css
@@ -480,6 +480,9 @@ header {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  transform: translateY(200px);
+  opacity: 0;
+  transition: 0.5s ease-in-out;
 }
 
 .section_2 .text_container .left_box .about_text {
@@ -613,10 +616,14 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  transform: translateY(200px);
+  opacity: 0;
+  transition: 0.5s ease-in-out;
 }
 
 .section_2 .contents_container .right_contents {
   border-left: 1px solid rgba(0, 0, 0, 0.3);
+  /* transition-delay: 0.5s; */
 }
 
 .section_2 .contents_container img {
