--- a/10.인트로스/css/common.css
+++ b/10.인트로스/css/common.css
@@ -9,3 +9,9 @@
 .section_2, .secition_3, .section_4, .section_5, .seciton_6 {
   padding: 200px 0;
 }
+
+.point_text {
+  font-size: 20px;
+  font-weight: 700;
+  color: rgb(100, 0, 255);
+}
